Added a new abstraction: ParallelizationTechniqueForLoopsWithLoopCarriedDataDependences

--- a/passes/parallelization_technique/src/CMakeLists.txt
+++ b/passes/parallelization_technique/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Sources
 set(Srcs 
   ParallelizationTechnique.cpp
+  ParallelizationTechniqueForLoopsWithLoopCarriedDataDependences.cpp
 )
 
 # Compilation flags
