Added the copyright. Rename analysis to pdg

--- a/passes/Makefile
+++ b/passes/Makefile
@@ -1,4 +1,4 @@
-all: printer analysis parallelization_utilities dgsimplify parallelizer heuristics parallelization_technique dswp doall helix
+all: printer pdg parallelization_utilities dgsimplify parallelizer heuristics parallelization_technique dswp doall helix
 
 printer:
 	cd $@ ; ../scripts/run_me.sh
@@ -6,7 +6,7 @@ printer:
 parallelization_utilities:
 	cd $@ ; ../scripts/run_me.sh
 
-analysis:
+pdg:
 	cd $@ ; ../scripts/run_me.sh
 
 dgsimplify:
@@ -36,4 +36,4 @@ uninstall:
 clean:
 	rm -rf */build */*.json ; find ./ -name .ycm_extra_conf.py -delete
 
-.PHONY: clean analysis printer dgsimplify parallelizer download parallelization_utilities heuristics parallelization_technique dswp doall helix
+.PHONY: clean pdg printer dgsimplify parallelizer download parallelization_utilities heuristics parallelization_technique dswp doall helix
