--- a/passes/Makefile
+++ b/passes/Makefile
@@ -1,4 +1,4 @@
-all: hotprofiler printer pdg parallelization_utilities dataflow dgsimplify parallelizer heuristics parallelization_technique dswp doall helix
+all: hotprofiler printer pdg parallelization_utilities alloc_aa dataflow dgsimplify parallelizer heuristics parallelization_technique dswp doall helix
 
 dataflow:
 	cd $@ ; ../scripts/run_me.sh
@@ -13,6 +13,9 @@ parallelization_utilities:
 	cd $@ ; ../scripts/run_me.sh
 
 pdg:
+	cd $@ ; ../scripts/run_me.sh
+
+alloc_aa:
 	cd $@ ; ../scripts/run_me.sh
 
 dgsimplify:
@@ -42,4 +45,4 @@ uninstall:
 clean:
 	rm -rf */build */*.json ; find ./ -name .ycm_extra_conf.py -delete
 
-.PHONY: clean pdg printer dgsimplify parallelizer download parallelization_utilities heuristics parallelization_technique dswp doall helix hotprofiler dataflow
+.PHONY: clean pdg printer alloc_aa dgsimplify parallelizer download parallelization_utilities heuristics parallelization_technique dswp doall helix hotprofiler dataflow
