Refactor/Bugfix: reducable variable accumulation, environment store/loads
Bugfix: par technique: reducable value accumulation not always started at identity
Refactor/Minor: parallelization: hoist environment allocas to top of function
Refactor/Major: par technique: store live out values at latest execution point possible

--- a/tests/scripts/Makefile
+++ b/tests/scripts/Makefile
@@ -6,7 +6,9 @@ LIBS=-lm
 
 RUNTIME_CFLAGS="-DDSWP_STATS"
 RUNTIME_CFLAGS=""
-PARALLELIZATION_OPTIONS=-pdg-verbose=1 -dswp-verbose=1 -dswp-force -doall-chunk-size=32 -doall-cores-per=8 -dswp-cores-per=2
+# Other parallelization options:
+# -doall-chunk-size=NUMBER, -doall-cores-per=NUMBER
+PARALLELIZATION_OPTIONS=-pdg-verbose=1 -dswp-verbose=1 -dswp-force -dswp-cores-per=2
 OPT_LEVEL=-O3
 
 INCLUDES=-I../../include/threadpool/include
