--- a/tests/scripts/Makefile
+++ b/tests/scripts/Makefile
@@ -65,6 +65,6 @@ show_time: test_seq.bc
 	opt $(OPTPASSES) $(ANALYSES) -Parallelizer $(PARALLELIZATION_OPTIONS) $^ -time-passes -disable-output
 
 clean:
-	rm -f *.bc *.dot *.jpg *.ll *.S *.s *.o *.txt baseline testseq $(OPTIMIZED)
+	rm -f *.bc *.dot *.jpg *.ll *.S *.s *.o *.txt baseline testseq $(OPTIMIZED) *.prof *.profraw
 
 .PHONY: show_passes show_time
