Hot: Improved the profiler

--- a/passes/hotprofiler/CMakeLists.txt
+++ b/passes/hotprofiler/CMakeLists.txt
@@ -28,4 +28,4 @@ include(AddLLVM)
 add_subdirectory(src)
 
 # Install
-install(PROGRAMS DESTINATION)
+install(PROGRAMS include/Hot.hpp DESTINATION include)
