Hot: improve the hot profiler and started the integration with NOELLE

--- a/passes/hotprofiler/CMakeLists.txt
+++ b/passes/hotprofiler/CMakeLists.txt
@@ -28,4 +28,4 @@ include(AddLLVM)
 add_subdirectory(src)
 
 # Install
-install(PROGRAMS include/Hot.hpp DESTINATION include)
+install(PROGRAMS include/HotProfiler.hpp include/Hot.hpp DESTINATION include)
