--- a/passes/parallelization_utilities/src/CMakeLists.txt
+++ b/passes/parallelization_utilities/src/CMakeLists.txt
@@ -26,7 +26,7 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
-include_directories(${LLVM_INCLUDE_DIRS} ../../pdg/include ../include)
+include_directories(${LLVM_INCLUDE_DIRS} ../../pdg/include ../../hotprofiler/include ../include)
 
 # Declare the LLVM pass to compile
 add_llvm_loadable_module(${PassName} ${Srcs})
