Feat: helix: spill loop carried data dependent PHI nodes

--- a/passes/helix/src/CMakeLists.txt
+++ b/passes/helix/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set(Srcs
   HELIX.cpp
   HELIXTask.cpp
   Linker.cpp
+  Spiller.cpp
   SequentialSegments.cpp
   SequentialSegment.cpp
   Scheduler.cpp
