--- a/passes/dataflow/src/CMakeLists.txt
+++ b/passes/dataflow/src/CMakeLists.txt
@@ -1,21 +1,14 @@
 # Sources
 set(Srcs 
-  HELIX.cpp
-  HELIXTask.cpp
-  Linker.cpp
-  Spiller.cpp
-  SequentialSegments.cpp
-  SequentialSegment.cpp
-  Scheduler.cpp
-  Synchronization.cpp
-  Inliner.cpp
+  DataFlowResult.cpp
+  DataFlowAnalysis.cpp
 )
 
 # Compilation flags
 set_source_files_properties(${Srcs} PROPERTIES COMPILE_FLAGS " -std=c++14 -fPIC")
 
 # Name of the LLVM pass
-set(PassName "HELIX")
+set(PassName "DataFlow")
 
 # configure LLVM 
 find_package(LLVM REQUIRED CONFIG)
@@ -29,7 +22,7 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
-include_directories(${LLVM_INCLUDE_DIRS} ../../dataflow/include ../../pdg/include ../../threadpool/include ../../parallelization_utilities/include ../../heuristics/include ../../parallelization_technique/include ../../doall/include ../include ./)
+include_directories(${LLVM_INCLUDE_DIRS} ../../parallelization_utilities/include ../include ./)
 
 # Declare the LLVM pass to compile
 add_llvm_loadable_module(${PassName} ${Srcs})
