Minor: helix: runtime debug printouts on dispatcher, wait, signal

--- a/tests/scripts/Makefile
+++ b/tests/scripts/Makefile
@@ -5,7 +5,7 @@ ANALYSES=$(AA) -scalar-evolution -loops -loop-simplify -lcssa -domtree -parallel
 LIBS=-lm
 
 RUNTIME_CFLAGS="-DDSWP_STATS"
-RUNTIME_CFLAGS=""
+RUNTIME_CFLAGS="-DRUNTIME_PRINT"
 # Other parallelization options:
 # -doall-chunk-size=NUMBER, -doall-cores-per=NUMBER
 PARALLELIZATION_OPTIONS=-alloc-aa-verbose=1 -pdg-verbose=1 -dswp-verbose=1 -dswp-force -dswp-cores-per=2
