HELIX: disable the arguments that override the number of cores

--- a/tests/scripts/Makefile
+++ b/tests/scripts/Makefile
@@ -6,9 +6,10 @@ LIBS=-lm
 
 RUNTIME_CFLAGS="-DDSWP_STATS"
 RUNTIME_CFLAGS="-DRUNTIME_PRINT"
+RUNTIME_CFLAGS=""
 # Other parallelization options:
 # -doall-chunk-size=NUMBER, -doall-cores-per=NUMBER
-PARALLELIZATION_OPTIONS=-alloc-aa-verbose=1 -pdg-verbose=1 -dswp-verbose=2 -dswp-force -doall-cores-per=2 -dswp-cores-per=2 -helix-cores-per=2
+PARALLELIZATION_OPTIONS=-alloc-aa-verbose=1 -pdg-verbose=1 -dswp-verbose=2 -dswp-force 
 OPT_LEVEL=-O3
 
 INCLUDES=-I../../include/threadpool/include
