Changed makefile rules that print information to dump it into a file

--- a/tests/scripts/Makefile
+++ b/tests/scripts/Makefile
@@ -24,6 +24,7 @@ PRINTPASSES=$(PDGPASS) -load ~/CAT/lib/PDGPrinter.so
 PARALLELIZATION_TECHNIQUES= -load ~/CAT/lib/DSWP.so -load ~/CAT/lib/DOALL.so -load ~/CAT/lib/HELIX.so
 PRE_OPTPASSES=$(PDGPASS) -load ~/CAT/lib/HotProfiler.so -load ~/CAT/lib/Parallelization.so -load ~/CAT/lib/DGSimplify.so
 OPTPASSES=$(PDGPASS) -load ~/CAT/lib/DataFlow.so -load ~/CAT/lib/HotProfiler.so -load ~/CAT/lib/Parallelization.so -load ~/CAT/lib/Heuristics.so -load ~/CAT/lib/ParallelizationTechnique.so $(PARALLELIZATION_TECHNIQUES) -load ~/CAT/lib/Parallelizer.so 
+PRINT_OUTPUT_FILE=
 
 all: baseline testseq $(OPTIMIZED)
 
@@ -73,13 +74,13 @@ show_time: test_seq.bc
 	opt $(OPTPASSES) $(ANALYSES) -heuristics -Parallelizer $(PARALLELIZATION_OPTIONS) $^ -time-passes -disable-output
 
 print_transformations_before_parallelization:
-	../../scripts/print.sh "$(TRANSFORMATIONS_BEFORE_PARALLELIZATION)"
+	../../scripts/print.sh "$(TRANSFORMATIONS_BEFORE_PARALLELIZATION)" "$(PRINT_OUTPUT_FILE)"
 
 print_alias_analyses:
-	../../scripts/print.sh "$(AA_ADVANCED)"
+	../../scripts/print.sh "$(AA_ADVANCED)" "$(PRINT_OUTPUT_FILE)"
 
 print_analyses:
-	../../scripts/print.sh "$(ANALYSES)"
+	../../scripts/print.sh "$(ANALYSES)" "$(PRINT_OUTPUT_FILE)"
 
 clean:
 	rm -f *.bc *.dot *.jpg *.ll *.S *.s *.o *.txt baseline testseq $(OPTIMIZED) *.prof *.profraw
