Added two passes UniqueIRMarker and OracleAA.
UniqueIRMarker uses LLVM metadata to add a unique ID to each
instruction, basic block, loop, function and module. This can be used
by later passes to reference these llvm constructions between passes.

OracleAA is a fake Alias Analysis pass which executes an instrumented
version of the bitcode and can then answer alias questions.
Requires a input argument string and is only correct when using the
same input argument string again.

--- a/passes/Makefile
+++ b/passes/Makefile
@@ -1,4 +1,10 @@
-all: printer pdg parallelization_utilities dgsimplify parallelizer heuristics parallelization_technique dswp doall helix
+all: printer pdg parallelization_utilities dgsimplify parallelizer heuristics parallelization_technique dswp doall helix oracle_aa unique_ir_marker
+
+oracle_aa:
+	cd $@ ; ../scripts/run_me.sh
+
+unique_ir_marker:
+	cd $@ ; ../scripts/run_me.sh
 
 printer:
 	cd $@ ; ../scripts/run_me.sh
@@ -36,4 +42,4 @@ uninstall:
 clean:
 	rm -rf */build */*.json ; find ./ -name .ycm_extra_conf.py -delete
 
-.PHONY: clean pdg printer dgsimplify parallelizer download parallelization_utilities heuristics parallelization_technique dswp doall helix
+.PHONY: clean pdg printer dgsimplify parallelizer download parallelization_utilities heuristics parallelization_technique dswp doall helix oracle_aa unique_ir_marker
