Modified the test Makefile to support OracleAA

--- a/tests/scripts/Makefile
+++ b/tests/scripts/Makefile
@@ -1,4 +1,8 @@
-CC=clang++
+
+INSTALL_DIR=/local/scratch/josi2/noelle/install
+INSTALL_LIB=$(INSTALL_DIR)/lib
+
+CC=${LLVM_BIN}/clang++
 AA_BASE=-basicaa
 AA_ADVANCED=$(AA_BASE) -globals-aa -cfl-steens-aa -tbaa -scev-aa -cfl-anders-aa
 ANALYSES=$(AA) -scalar-evolution -loops -loop-simplify -lcssa -domtree -parallelization -heuristics
@@ -13,17 +17,24 @@ INCLUDES=-I../../include/threadpool/include
 THREADER=Parallelizer_utils
 OPTIMIZED=parallelized
 
-TRANSFORMATIONS_BEFORE_PARALLELIZATION=$(AA_BASE) -mem2reg -simplifycfg -instcombine -tailcallelim -loop-simplify -lcssa -loop-unswitch -instcombine -loop-simplify -lcssa -indvars -loop-deletion -instcombine -indvars
-PDGPASS=-load ~/CAT/lib/PDGAnalysis.so
-PRINTPASSES=$(PDGPASS) -load ~/CAT/lib/PDGPrinter.so
-PARALLELIZATION_TECHNIQUES= -load ~/CAT/lib/DSWP.so -load ~/CAT/lib/DOALL.so -load ~/CAT/lib/HELIX.so
-PRE_OPTPASSES=$(PDGPASS) -load ~/CAT/lib/Parallelization.so -load ~/CAT/lib/DGSimplify.so
-OPTPASSES=$(PDGPASS) -load ~/CAT/lib/Parallelization.so -load ~/CAT/lib/Heuristics.so -load ~/CAT/lib/ParallelizationTechnique.so $(PARALLELIZATION_TECHNIQUES) -load ~/CAT/lib/Parallelizer.so 
 
-all: baseline testseq $(OPTIMIZED)
+
+TRANSFORMATIONS_BEFORE_PARALLELIZATION=$(AA_BASE) -mem2reg -simplifycfg -instcombine -tailcallelim -loop-simplify -lcssa -loop-unswitch -instcombine -loop-simplify -lcssa -indvars -loop-deletion -instcombine -indvars
+ORACLEAA_PASS=-load $(INSTALL_LIB)/UniqueIRMarker.so -load $(INSTALL_LIB)/OracleAA.so  -input-args "${oracle_input_args}" -exe-script=$(INSTALL_DIR)/bin/run_via.sh -loops
+PDGPASS=$(ORACLEAA_PASS) -load $(INSTALL_LIB)/PDGAnalysis.so
+PRINTPASSES=$(PDGPASS) -load $(INSTALL_LIB)/PDGPrinter.so
+PARALLELIZATION_TECHNIQUES= -load $(INSTALL_LIB)//DSWP.so -load $(INSTALL_LIB)/DOALL.so -load $(INSTALL_LIB)/HELIX.so
+PRE_OPTPASSES=$(PDGPASS) -load $(INSTALL_LIB)/Parallelization.so -load $(INSTALL_LIB)/DGSimplify.so
+OPTPASSES=$(PDGPASS) -load $(INSTALL_LIB)/Parallelization.so -load $(INSTALL_LIB)/Heuristics.so -load $(INSTALL_LIB)/ParallelizationTechnique.so $(PARALLELIZATION_TECHNIQUES) -load $(INSTALL_LIB)/Parallelizer.so 
+
+all: baseline baseline_pdgdot.bc testseq $(OPTIMIZED)
 
 baseline: baseline.bc
+	@echo $(PATH)
 	$(CC) $(OPT_LEVEL) $^ -o $@
+
+baseline_pdgdot.bc: test.bc
+	opt $(PRINTPASSES) $(ANALYSIS) -use-oracle-aa -PDGPrinter $^  -o $@
 
 testseq: test_seq.bc
 	$(CC) -std=c++14 -pthreads $(OPT_LEVEL) $^ $(LIBS) -o $@
@@ -48,7 +59,7 @@ baseline.bc: test.bc
 
 test.bc: test.cpp
 	$(CC) $(INCLUDES) -std=c++14 -emit-llvm -O0 -Xclang -disable-O0-optnone -c $< -o $@
-	opt $(TRANSFORMATIONS_BEFORE_PARALLELIZATION) $@ -o $@
+#	opt $(TRANSFORMATIONS_BEFORE_PARALLELIZATION) $@ -o $@
 	opt -dot-cfg -disable-output $@
 	llvm-dis $@
 
