Added Oracle_aa test which take a LLVM bitcode file 'test.in' UniqueIRMarker run on it and a 'test.aa' file which is the expected dependencies that test.in should produce.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,6 +3,9 @@ RUNTIME_GITREPO="https://github.com/scampanoni"
 
 all: regression performance
 
+oracle_aa: download
+	./scripts/test_oracle_aa.sh ;
+
 regression: download
 	./scripts/test_regression.sh ;
 
