Added checks to the OracleAA pass to make sure that what the Oracle reports agrees with LLVM AA

--- a/passes/oracle_aa/CMakeLists.txt
+++ b/passes/oracle_aa/CMakeLists.txt
@@ -5,7 +5,7 @@ project(CAT)
 # Programming languages to use
 enable_language(C CXX)
 
-find_package(RapidJSON)
+find_package(RapidJSON REQUIRED)
 
 # Find and link with LLVM
 find_package(LLVM REQUIRED CONFIG)
