Added a commutative dependence analysis pass which will mark up edges in the pdg as commutative

--- a/passes/Makefile
+++ b/passes/Makefile
@@ -1,9 +1,12 @@
-all: hotprofiler printer pdg parallelization_utilities alloc_aa dataflow dgsimplify parallelizer heuristics parallelization_technique dswp doall helix oracle_aa unique_ir_marker
+all: hotprofiler printer pdg parallelization_utilities alloc_aa dataflow dgsimplify parallelizer heuristics parallelization_technique dswp doall helix oracle_aa unique_ir_marker commutative_dependence_analysis 
 
 oracle_aa:
 	cd $@ ; ../scripts/run_me.sh
 
 unique_ir_marker:
+	cd $@ ; ../scripts/run_me.sh
+
+commutative_dependence_analysis:
 	cd $@ ; ../scripts/run_me.sh
 
 dataflow:
@@ -51,4 +54,4 @@ uninstall:
 clean:
 	rm -rf */build */*.json ; find ./ -name .ycm_extra_conf.py -delete
 
-.PHONY: clean pdg printer alloc_aa dgsimplify parallelizer download parallelization_utilities heuristics parallelization_technique dswp doall helix hotprofiler dataflow oracle_aa unique_ir_marker
+.PHONY: clean pdg printer alloc_aa dgsimplify parallelizer download parallelization_utilities heuristics parallelization_technique dswp doall helix hotprofiler dataflow oracle_aa unique_ir_marker commutative_dependence_analysis
