--- a/passes/pdg/src/CMakeLists.txt
+++ b/passes/pdg/src/CMakeLists.txt
@@ -25,9 +25,11 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
-include_directories(${LLVM_INCLUDE_DIRS} ../../oracle_aa/include 
-	                                 ../../unique_ir_marker/include 
-					 ../../parallelization_utilities/include 
+include_directories(${LLVM_INCLUDE_DIRS}
+		             ../../oracle_aa/include
+	                 ../../unique_ir_marker/include
+		             ../../commutative_dependence_analysis/include
+					 ../../parallelization_utilities/include
 					 ../../alloc_aa/include 
 					 ../../talkdown/include 
 					 ../include )
