Added the architecture pass

--- a/passes/Makefile
+++ b/passes/Makefile
@@ -1,4 +1,4 @@
-all: hotprofiler printer pdg parallelization_utilities talkdown alloc_aa dataflow dgsimplify parallelizer heuristics parallelization_technique dswp doall helix
+all: parallelization_utilities architecture hotprofiler printer pdg talkdown alloc_aa dataflow dgsimplify parallelizer heuristics parallelization_technique dswp doall helix
 
 dataflow:
 	cd $@ ; ../scripts/run_me.sh
@@ -10,6 +10,9 @@ printer:
 	cd $@ ; ../scripts/run_me.sh
 
 parallelization_utilities:
+	cd $@ ; ../scripts/run_me.sh
+
+architecture:
 	cd $@ ; ../scripts/run_me.sh
 
 pdg:
@@ -48,4 +51,4 @@ uninstall:
 clean:
 	rm -rf */build */*.json ; find ./ -name .ycm_extra_conf.py -delete
 
-.PHONY: clean pdg printer talkdown alloc_aa dgsimplify parallelizer download parallelization_utilities heuristics parallelization_technique dswp doall helix hotprofiler dataflow
+.PHONY: clean pdg printer talkdown alloc_aa dgsimplify parallelizer download parallelization_utilities heuristics parallelization_technique dswp doall helix hotprofiler dataflow architecture
