--- a/passes/architecture/src/CMakeLists.txt
+++ b/passes/architecture/src/CMakeLists.txt
@@ -1,19 +1,13 @@
 # Sources
 set(Srcs 
-  LoopSummary.cpp
-  EnvBuilder.cpp
-  LoopEnvironment.cpp
-  SCCDAGAttrs.cpp
-  LoopDependenceInfo.cpp
-  SCCDAGPartition.cpp
-  Parallelization.cpp
+  Architecture.cpp
 )
 
 # Compilation flags
 set_source_files_properties(${Srcs} PROPERTIES COMPILE_FLAGS " -std=c++14 -fPIC")
 
 # Name of the LLVM pass
-set(PassName "Parallelization")
+set(PassName "Architecture")
 
 # configure LLVM 
 find_package(LLVM REQUIRED CONFIG)
@@ -27,7 +21,7 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
-include_directories(${LLVM_INCLUDE_DIRS} ../../architecture/include ../../alloc_aa/include ../../pdg/include ../../hotprofiler/include ../include)
+include_directories(${LLVM_INCLUDE_DIRS} ../../parallelization_utilities/include ../include ./)
 
 # Declare the LLVM pass to compile
 add_llvm_loadable_module(${PassName} ${Srcs})
